# payloads-firmware

./: .mxproject  CMakeLists.txt  Payloads.ioc  README.md  STM32G0B1XX_FLASH.ld
Core/Inc/: main.h  rn2483.h
Core/Inc/accel/: bmi088_accel.h  bmi088_accel_stm32.h
Core/Inc/uv/: ltr390.h  ltr390_stm32.h
Core/Src/: main.c  rn2483.c  stm32g0xx_hal_msp.c
Core/Src/accel/: bmi088_accel.c  bmi088_accel_stm32.c
Core/Src/uv/: ltr390.c  ltr390_stm32.c
EWARM/: Payloads.ewd  Payloads.ewp  Project.eww
cmake/stm32cubemx/: CMakeLists.txt
tests/: CMakeLists.txt  test_bmi088_accel.c  test_ltr390.c
tests/stubs/: stm32g0xx_hal.h
